fix overflow

--- a/style.css
+++ b/style.css
@@ -30,6 +30,7 @@ body {
   display: flex;
   -webkit-overflow-scrolling: touch;
   overflow-x: scroll;
+  overflow-y: hidden;
 }
 
 section {
